Add distance to selected location

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
           Location: <span class="loc-name"></span>
           <span class="loc-rate"></span>
         </h2>
+        <h4 class="selected-distance">
+          
+        </h4>
         <h4 class="loc-address"></h4>
         <button onclick="app.onCopyLoc()">Copy location</button>
         <button onclick="app.onShareLoc()">Share location</button>
